<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/urlTextView"
        android:id="@+id/urlTextView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="http://server:port/resource"
        android:ems="10"
        android:id="@+id/txtUrl" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/methodTextView"
        android:id="@+id/methodTextView" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rgMethod"
        android:checkedButton="@+id/rbGet"
        android:orientation="horizontal">
        <RadioButton
            android:text="@string/radioButtonGet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbGet"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/radioButtonPut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbPut"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/radioButtonPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbPost"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/radioButtonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbDelete"
            android:layout_weight="1" />
    </RadioGroup>

    <Switch
        android:text="@string/authentification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/swtAuthEnabled"
        android:checked="false"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:visibility="gone"
        android:id="@+id/authGroup">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Username"
            android:ems="10"
            android:id="@+id/txtUsername"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Passwort"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtPassword"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:enabled="false"
        android:visibility="gone"
        android:id="@+id/contentTypeGroup">
        <TextView
            android:text="@string/contentType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerContentType"
            android:entries="@array/entries"
            />

        <TextView
            android:text="@string/textViewZoneIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewZoneIn" />
        <EditText
            android:hint="@string/payload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:id="@+id/txtPayloadZoneIn"/>

        <TextView
            android:text="@string/textViewZoneOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewZoneOut" />
        <EditText
            android:hint="@string/payload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:id="@+id/txtPayloadZoneOut"/>
    </LinearLayout>

</LinearLayout>
