<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1">

        <EditText
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/urlTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/urlTextView" />

        <EditText
            android:id="@+id/txtUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="http://server:port/resource"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/methodTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/methodTextView" />

        <RadioGroup
            android:id="@+id/rgMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/rbGet"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbGet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioButtonGet" />

            <RadioButton
                android:id="@+id/rbPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioButtonPost" />

            <RadioButton
                android:id="@+id/rbPut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioButtonPut" />

            <RadioButton
                android:id="@+id/rbDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioButtonDelete" />
        </RadioGroup>

        <Switch
            android:id="@+id/swtAuthEnabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/authentification" />

        <LinearLayout
            android:id="@+id/authGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Username"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Passwort"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contentTypeGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contentType" />

            <Spinner
                android:id="@+id/spinnerContentType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/entries" />

            <TextView
                android:id="@+id/textViewZoneIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewZoneIn" />

            <EditText
                android:id="@+id/txtPayloadZoneIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/payload"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textViewZoneOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewZoneOut" />

            <EditText
                android:id="@+id/txtPayloadZoneOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/payload"
                android:inputType="textMultiLine" />
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_profile_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="@id/linear_layout_profile"
        android:layout_marginRight="@id/linear_layout_profile"
        android:src="@android:drawable/ic_menu_save"
        app:layout_anchor="@id/linear_layout_profile"
        app:layout_anchorGravity="bottom|right|end" />
</android.support.design.widget.CoordinatorLayout>
